--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -19,10 +19,10 @@
         </ul>
       </li>
 
-      <li><a href="chapter3.html">3장. Availability</a></li>
-      <li><a href="chapter4.html">4장. Booking</a></li>
-      <li><a href="chapter5.html">5장. Clean Screen</a></li>
-      <li><a href="chapter6.html">6장. ...</a></li>
+      <li><a href="chapter3.html">3장. 예약</a></li>
+      <li><a href="chapter4.html">4장. 결제 및 환불</a></li>
+      <li><a href="chapter5.html">5장. PM?</a></li>
+      <li><a href="chapter6.html">6장. 야간근무</a></li>
       <li><a href="chapter7.html">7장. ...</a></li>
     </ul>
   </nav>
