--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -11,11 +11,14 @@
       <li>
         <a href="chapter2.html" class="has-submenu">2장. IN/OUT MOVEMENTS ▾</a>
         <ul class="submenu">
-          <li><a href="chapter2_section1.html">2-1. 체크인</a></li>
-          <li><a href="chapter2_section2.html">2-2. 체크아웃</a></li>
-          <li><a href="chapter2_section3.html">2-3. 이동 기록</a></li>
-          <li><a href="chapter2_section4.html">2-4. 객실 관리</a></li>
-          <li><a href="chapter2_section5.html">2-5. 보고서</a></li>
+            <li><a href="chapter2/section1.html">2-1. 체크인</a></li>
+            <li><a href="chapter2/section2.html">2-2. 체크아웃</a></li>
+            <li><a href="chapter2/section3.html">2-3. 객실 이동</a></li>
+            <li><a href="chapter2/section4.html">2-4. 객실 기간 변동</a></li>
+            <li><a href="chapter2/section5.html">2-5. 레이스아웃, 얼리인</a></li>
+            <li><a href="chapter2/section6.html">2-6. ...</a></li>
+            <li><a href="chapter2/section7.html">2-7. ...</a></li>
+            <li><a href="chapter2/section8.html">2-8. ...</a></li>
         </ul>
       </li>
 
