--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -9,7 +9,7 @@
       
       <!-- 2장 하위 메뉴 -->
       <li>
-        <a href="chapter2.html" class="has-submenu">2장. IN/OUT MOVEMENTS ▾</a>
+        <a href="chapter2/index.html" class="has-submenu">2장. IN/OUT MOVEMENTS ▾</a>
         <ul class="submenu">
             <li><a href="chapter2/section1.html">2-1. 체크인</a></li>
             <li><a href="chapter2/section2.html">2-2. 체크아웃</a></li>
@@ -22,10 +22,18 @@
         </ul>
       </li>
 
-      <li><a href="chapter3.html">3장. 예약</a></li>
+      <li>
+        <a href="chapter3/index.html" class="has-submenu">3장. 예약 ▾</a>
+        <ul class="submenu">
+            <li><a href="chapter3/section1.html">3-1. 예약 생성</a></li>
+            <li><a href="chapter3/section2.html">3-2. OTA건별 예약 생성</a></li>
+            <li><a href="chapter3/section3.html">3-3. 미정</a></li>
+            <li><a href="chapter3/section4.html">3-4. 미정</a></li>
+        </ul>
+      </li>
       <li><a href="chapter4.html">4장. 결제 및 환불</a></li>
-      <li><a href="chapter5.html">5장. PM?</a></li>
-      <li><a href="chapter6.html">6장. 야간근무</a></li>
+      <li><a href="chapter5.html">5장. OTA</a></li>
+      <li><a href="chapter6.html">6장. ...</a></li>
       <li><a href="chapter7.html">7장. ...</a></li>
     </ul>
   </nav>
