--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,7 +15,7 @@
             <li><a href="chapter2/section2.html">2-2. 체크아웃</a></li>
             <li><a href="chapter2/section3.html">2-3. 객실 이동</a></li>
             <li><a href="chapter2/section4.html">2-4. 객실 기간 변동</a></li>
-            <li><a href="chapter2/section5.html">2-5. 레이스아웃, 얼리인</a></li>
+            <li><a href="chapter2/section5.html">2-5. 레이트 아웃, 얼리인</a></li>
             <li><a href="chapter2/section6.html">2-6. ...</a></li>
             <li><a href="chapter2/section7.html">2-7. ...</a></li>
             <li><a href="chapter2/section8.html">2-8. ...</a></li>
@@ -34,7 +34,7 @@
       <li><a href="chapter4.html">4장. 결제 및 환불</a></li>
       <li><a href="chapter5.html">5장. OTA</a></li>
       <li><a href="chapter6.html">6장. ...</a></li>
-      <li><a href="chapter7.html">7장. ...</a></li>
+      <li><a href="chapter7.html">7장. 야간근무</a></li>
     </ul>
   </nav>
 </aside>
